--- a/BTL/app/src/main/res/layout/activity_main.xml
+++ b/BTL/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:background="@color/background_color"
-    tools:context=".MainActivity">
+    tools:context=".ui.appplication.MainActivity">
 
     <!-- Tiêu đề "Chúc mừng!" -->
     <TextView
