--- a/BTL/app/src/main/res/layout/activity_register_course.xml
+++ b/BTL/app/src/main/res/layout/activity_register_course.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".RegisterCourseActivity">
+    tools:context=".ui.appplication.RegisterCourseActivity">
 
     <!-- Tiêu đề "Đăng ký học bằng lái xe" -->
     <TextView
