--- a/BTL/app/src/main/res/values/ids.xml
+++ b/BTL/app/src/main/res/values/ids.xml
@@ -21,4 +21,13 @@
     <item name="radioB2" type="id" />
     <item name="startDateText" type="id" />
     <item name="startDateEditText" type="id" />
+    <item name="et_amount" type="id" />
+    <item name="tv_amount_label" type="id" />
+    <item name="et_account_name" type="id" />
+    <item name="tv_account_name_label" type="id" />
+    <item name="tv_payment_title" type="id" />
+    <item name="img_qr_code" type="id" />
+    <item name="btn_submit_payment" type="id" />
+    <item name="et_bank_name" type="id" />
+    <item name="tv_bank_name_label" type="id" />
 </resources>
