--- a/BTL/app/src/main/res/layout/activity_payment.xml
+++ b/BTL/app/src/main/res/layout/activity_payment.xml
@@ -112,14 +112,14 @@
     <!-- QR Code -->
     <ImageView
         android:id="@+id/img_qr_code"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="199dp"
+        android:layout_height="164dp"
         android:layout_marginTop="24dp"
-        android:src="@drawable/qr"
         android:contentDescription="QR Code"
-        app:layout_constraintTop_toBottomOf="@id/tv_account_number_value"
+        android:src="@drawable/qr"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv_account_number_value" />
 
     <!-- Submit Button -->
 
@@ -137,9 +137,10 @@
         android:id="@+id/btn_submit_payment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
         android:text="Xác nhận thanh toán"
-        app:layout_constraintTop_toBottomOf="@id/img_qr_code"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_qr_code" />
 </androidx.constraintlayout.widget.ConstraintLayout>
