--- a/BTL/app/src/main/res/layout/activity_payment.xml
+++ b/BTL/app/src/main/res/layout/activity_payment.xml
@@ -36,7 +36,7 @@
         android:id="@+id/tv_account_name_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nguyễn Văn A"
+        android:text="Nguyễn Văn Anh"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@id/tv_account_name_label"
         app:layout_constraintTop_toBottomOf="@id/tv_payment_title"
@@ -80,7 +80,7 @@
         android:id="@+id/tv_bank_name_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ngân hàng ABC"
+        android:text="Ngân hàng Việt Nam"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@id/tv_bank_name_label"
         app:layout_constraintTop_toBottomOf="@id/tv_amount_value"
@@ -139,6 +139,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:text="Xác nhận thanh toán"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_qr_code" />
+
+    <Button
+        android:id="@+id/btn_back"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
+        android:text="Quay lại"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
