--- a/BTL/app/src/main/res/layout/activity_car_care_info.xml
+++ b/BTL/app/src/main/res/layout/activity_car_care_info.xml
@@ -60,9 +60,11 @@
 
     <Button
         android:id="@+id/backButton"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_margin="20dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/rounded_button"
         android:text="@string/title_return"
         android:textColor="@android:color/white"
@@ -71,14 +73,32 @@
         app:layout_constraintWidth_percent="0.4" />
 
     <Button
+        android:id="@+id/paymentCarCareButton"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rounded_button"
+        android:text="Thanh toán"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/registerCarCareButton"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_margin="20dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/rounded_button"
         android:text="@string/title_register"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.4" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
